--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: postgres://user:pass@postgres:5432/desafio_boticario
-      NODE_ENV: development
-      PORT: 3333
+      - POSTGRES_DB=desafio_boticario
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=docker
     ports:
       - "3333:3333"
     command: npm run dev:server
@@ -18,6 +18,6 @@ services:
   postgres:
     image: postgres:10.4
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: docker
-      POSTGRES_DB: desafio_boticario
+      - POSTGRES_DB=desafio_boticario
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=docker
